Upgrade to PDI CE 4.3.0. Fixed #1.